--- a/background.qrc
+++ b/background.qrc
@@ -4,5 +4,6 @@
         <file>img/aerodrom-satellite-720.png</file>
         <file>img/point-sample.png</file>
         <file>img/nothing.png</file>
+        <file>img/point-sample-blue.png</file>
     </qresource>
 </RCC>
