--- a/background.qrc
+++ b/background.qrc
@@ -3,7 +3,7 @@
         <file>img/aerodrom-satellite.png</file>
         <file>img/aerodrom-satellite-720.png</file>
         <file>img/point-sample.png</file>
-        <file>img/nothing.png</file>
         <file>img/point-sample-blue.png</file>
+        <file>img/yellow-point.png</file>
     </qresource>
 </RCC>
