--- a/background.qrc
+++ b/background.qrc
@@ -1,7 +1,6 @@
 <RCC>
-    <qresource prefix="/img">
+    <qresource prefix="/src">
         <file>img/aerodrom-satellite.png</file>
-        <file>img/aerodrom-satellite-720.png</file>
         <file>img/point-sample.png</file>
         <file>img/point-sample-blue.png</file>
         <file>img/yellow-point.png</file>
